--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ timezone: American/New_York
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy                          # the main title
+title: Adrian Noa                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: Software Engineer and Full Stack Developer ➤ Food Service Professional   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
@@ -32,20 +32,20 @@ description: >-                        # used by seo meta and the atom feed
 url: 'https://adrianmnh.github.io'
 
 github:
-  username: github_username             # change to your github username
+  username: adrianmnh            # change to your github username
 
 twitter:
-  username: twitter_username            # change to your twitter username
+  username: nlawliet6            # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@doamin.com             # change to your email address
+  name: Adrian Miguel Noa
+  email: adrian_noa@icloud.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+    - https://adrianmnh.github.io     # change to your twitter homepage
+    - https://github.com/adrianmnh       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
