--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ theme: jekyll-theme-chirpy
 
 # Change the following value to '/PROJECT_NAME' ONLY IF your site type is GitHub Pages Project sites
 # and doesn't have a custom domain.
-baseurl: ''
+baseurl: '/courses'
 
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
@@ -21,22 +21,16 @@ timezone: American/New_York
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Adrian Noa                          # the main title
+title: Courses                          # the main title
 
-tagline: '
-  ➤ Software Engineer 
-  ➤ Full Stack Developer 
-  ➤ Food Service Professional
-  '
-
-# it will display as the sub-title
+tagline: These are some notes I've accumulated over the years, self taught and Queens College student # it will display as the sub-title
 
 
 description: >-                        # used by seo meta and the atom feed
   A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: 'https://adrianmnh.github.io'
+url: 'https://adrianmnh.github.io/courses'
 
 github:
   username: adrianmnh            # change to your github username
